newclay/test/Compiler/Propagation/Fail/BaselessRecursivePropagation/main.clay

symbol foo;
overload foo(x:Int) = if (true) foo(1) else foo(0);

symbol main;
overload main() = foo(2);

